RESOLVED FIXED119148
REGRESSION(FTL): Fix lots of crashes in sh4 JIT
https://bugs.webkit.org/show_bug.cgi?id=119148
Summary REGRESSION(FTL): Fix lots of crashes in sh4 JIT
Julien Brianceau
Reported 2013-07-26 06:50:37 PDT
- secondArgumentRegister is wrong in JSInterfaceJIT.h - "move t0, a0" is missing in nativeCallTrampoline from LLINT, reuse the MIPS implementation to avoid code duplication
Attachments
Fix secondArgumentRegister and nativeCallTrampoline in sh4 backend. (2.99 KB, patch)
2013-07-26 06:55 PDT, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-07-26 06:55:11 PDT
Created attachment 207528 [details] Fix secondArgumentRegister and nativeCallTrampoline in sh4 backend.
Csaba Osztrogonác
Comment 2 2013-07-26 07:01:02 PDT
Comment on attachment 207528 [details] Fix secondArgumentRegister and nativeCallTrampoline in sh4 backend. rs=me
WebKit Commit Bot
Comment 3 2013-07-26 07:40:43 PDT
Comment on attachment 207528 [details] Fix secondArgumentRegister and nativeCallTrampoline in sh4 backend. Clearing flags on attachment: 207528 Committed r153371: <http://trac.webkit.org/changeset/153371>
WebKit Commit Bot
Comment 4 2013-07-26 07:40:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.