REGRESSION(FTL): Fix lots of crashes in sh4 baseline JIT. https://bugs.webkit.org/show_bug.cgi?id=119148

Patch by Julien Brianceau <jbrianceau@nds.com> on 2013-07-26
Reviewed by Csaba Osztrogonác.

* jit/JSInterfaceJIT.h: "secondArgumentRegister" is wrong for sh4.
* llint/LowLevelInterpreter32_64.asm: "move t0, a0" is missing
in nativeCallTrampoline for sh4. Reuse MIPS implementation to avoid
code duplication.

Canonical link: https://commits.webkit.org/137154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153371 268f45cc-cd09-0410-ab3c-d52691b4dbfc